<resources>
    <string name="app_name">AstroView</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="show_password_prompt">Show Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="your_account_title">Your Account</string>
    <string name="account_details">Logged in as %1$s</string>
    <string name="hipparcos_prompt">On the Hipparcos List</string>
    <string name="comments_title">Comments</string>
    <string name="add_comment_prompt">Add Comment</string>
    <string name="delete_account_prompt">Delete</string>
    <string name="logout_account_prompt">Logout</string>
    <string name="menu_gyro_lock">Lock Stars</string>
    <string name="menu_user">Manage Account</string>
    <string name="permission_refused_message">We need location permissions in order to accurately display stars around you.</string>
    <string name="permission_refused_positive">OK</string>
    <string name="star_map_title">Star Map</string>
    <string name="star_map_north">N</string>
    <string name="change_password_prompt">Change Password</string>
    <string name="change_password_hint">New Password</string>
    <string name="star_info_magnitude">V-Magnitude: %1$.2f</string>
    <string name="star_info_bV">B-V: %1$.2f</string>
    <string name="star_info_hipparcos">On the Hipparcos list, star number %1$d</string>
    <string name="menu_help">Help</string>
    <string name="menu_share" />
    <string name="menu_download">Download File</string>
    <string name="channel_name">AstroView</string>
    <string name="channel_description">AstroView notifications</string>
    <string name="enter_comment_prompt">Enter comment…</string>
    <string name="OBTitle">Welcome to AstroView!</string>
    <string name="OBPg1">The solution for all your Astronomy needs!</string>
    <string name="OBFeatures">Star Map</string>
    <string name="OBPg2">Rotate your phone to view the stars!\n\nUse the buttons in the top right to:\n- Stop sensor input\n- View help pages</string>
    <string name="OBPg4">Have Fun!</string>
    <string name="start">Start App!</string>
    <string name="OBFeatures2">Star Info</string>
    <string name="OBPg3">View information about stars by zooming in!\nComment and view on other people\'s comments, and interact with others!</string>
</resources>